# lineups

./: .gitignore  README.md  generate_pages.py  index.html  pyproject.toml
.github/workflows/: static.yml
lineups/: __init__.py  generate_pages.py
