[tool.poetry]
name = "lineups"
version = "0.1.0"
description = ""
authors = ["velolib <vlocitize@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
yattag = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
